--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <a href="https://en.wikipedia.org/wiki/Problem_solving#Collective_problem_solving" target="_blank"><li class="label">Problem-solving</li></a>
                     </ul>
                 </div>
+            <h1><a href="https://streamed.su/" target="" class="link">STREAMED SU LINK</a></h1>
             <h1>Standing on the<br> shoulders of giants</h1>
             <img src="https://raw.githubusercontent.com/Mugiballa7/Mugiballa7.github.io/main/Copie%20de%20Sans%20titre%20(1).png" alt="" width="90%">
         </div>
