--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </ul>
                 </div>
             <h1><a href="https://streamed.su/" target="" class="link">STREAMED SU LINK</a></h1>
+            <h1><a href="https://papadustream.vc/categorie-series/comedie-s/1144-suits-avocats-sur-mesure/4-saison/3-episode.html" target="" class="link">PAPADUSTREAM</a></h1>
             <h1>Standing on the<br> shoulders of giants</h1>
             <img src="https://raw.githubusercontent.com/Mugiballa7/Mugiballa7.github.io/main/Copie%20de%20Sans%20titre%20(1).png" alt="" width="90%">
         </div>
