--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <a href="https://en.wikipedia.org/wiki/Problem_solving#Collective_problem_solving" target="_blank"><li class="label">Problem-solving</li></a>
                     </ul>
                 </div>
+            <h1><a href="https://miztv.shop/stream/stream-116.php" target="" class="link">MIZTV</a></h1>
             <h1><a href="https://streamed.su/" target="" class="link">STREAMED SU LINK</a></h1>
             <h1><a href="https://papadustream.vc/categorie-series/comedie-s/1144-suits-avocats-sur-mesure/4-saison/3-episode.html" target="" class="link">PAPADUSTREAM</a></h1>
             <h1>Standing on the<br> shoulders of giants</h1>
