--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </ul>
                 </div>
             <h1><a href="https://ppv.land/watch.html?stream=lb_epl2" target="" class="link">PPV</a></h1>
+            <h1><a href="https://worldstreams.live/play/live/18373/dazn1-france" target="" class="link">worldstream</a></h1>
             <h1><a href="https://miztv.shop/stream/stream-116.php" target="" class="link">MIZTV</a></h1>
             <h1><a href="https://streamed.su/" target="" class="link">STREAMED SU LINK</a></h1>
             <h1><a href="https://papadustream.vc/categorie-series/comedie-s/1144-suits-avocats-sur-mesure/4-saison/3-episode.html" target="" class="link">PAPADUSTREAM</a></h1>
