--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
             <h1><a href="https://ppv.land/watch.html?stream=lb_epl2" target="" class="link">PPV</a></h1>
             <h1><a href="https://rivestream.live/detail?type=movie&id=1726" target="" class="link">RIVESTREAM</a></h1>
+            <h1><a href="https://danteh2uz.settlespiderkrcx5k.shop/football/french-ligue-1-3989346/fc-nantes-vs-as-monaco.html?icg=RlI&ilang=en" target="" class="link">dant2huz</a></h1>
             <h1><a href="https://worldstreams.live/play/live/18373/dazn1-france" target="" class="link">worldstream</a></h1>
             <h1><a href="https://miztv.shop/stream/stream-116.php" target="" class="link">MIZTV</a></h1>
             <h1><a href="https://streamed.su/" target="" class="link">STREAMED SU LINK</a></h1>
