--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
             <h1><a href="https://ppv.land/watch.html?stream=lb_epl2" target="" class="link">PPV</a></h1>
             <h1><a href="https://galla.tube/watch/lens-vs-paris-sg-2076377" target="" class="link">GALLATUBE</a></h1>
+            <h1><a href="https://www.rbtv77.com/" target="" class="link">RBTV77</a></h1>
             <h1><a href="https://benmq6h.familiarpowdert89eyas.shop/football/coupe-de-france-4106499/bourgoin-jallieu-vs-lyon.html?icg=RlI" target="" class="link">Apagnan</a></h1>
             <h1><a href="https://rivestream.live/detail?type=movie&id=1726" target="" class="link">RIVESTREAM</a></h1>
             <h1><a href="https://homosports.shop/online/stream-55.php" target="" class="link">Homosports</a></h1>
@@ -50,77 +51,6 @@
             <img src="https://raw.githubusercontent.com/Mugiballa7/Mugiballa7.github.io/main/Copie%20de%20Sans%20titre%20(1).png" alt="" width="90%">
         </div>
     </header>
-
-    <main>
-        
-        <div class="text_template">
-            <div class="text_left"></div>
-            <div class="text_right">
-                <p class="text_content"><em>The abundance of scientific output forces the few scientists to exploit the same famous and/or recent research, which reduces the innovation of scientific output and patents. By giving the necessary tools and incentives, Latimer can engage the crowd to explore a much wider network of knowledge than any individual organisation could to address questions in truly creative ways never done before.</em></p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link">Join the waitlist </a>
-            </div>
-        </div>
-
-        <div class="text_template h2">
-            <h1 class="text_right one">Collective intelligence. Unlocking breakthroughs</h1>
-        </div>
-
-        <div class="text_template">
-            <p class="text_right"><strong> Collective intelligence.</strong> The crowd can analyze a large amount of knowledge with its workforce. Latimer offers everyone the opportunity to create a solution from scratch or to improve on existing ideas. Thus, even unusual or bizarre approaches can be tested, the most promising ideas can be explored further and the least effective ones eliminated. This method differs from traditional methods that are limited to a competitive model and require participants to write a full answer themselves, which requires at least a large network or expertise in the overall problem they need to solve.<br></p>
-        </div>
-
-        <div class="text_template reverse">
-            <div class="text_left"><p class="text_content"><em>Focus on your area of genius. </em>Solve problems by examining them through the lens of your unique experiences, and collaborate with others to merge distant knowledge and approach problems from a different perspective.<br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link">Join the waitlist </a></p></div>
-            <div class="text_right"><img src="https://raw.githubusercontent.com/Mugiballa7/Mugiballa7.github.io/main/Sans%20titre%20(10).png" alt="" width="100%"></div>
-        </div>
-
-        <div class="text_template">
-            <div class="text_left"><p class="text_content"><em>All work deserves to be paid for.</em> Latimer solvers are paid in proportion to the importance and quality of their contribution, as we consider that a good contribution helps the whole group to solve the problem.<br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link">Join the waitlist </a></p></div>
-            <div class="text_right"><img src="https://raw.githubusercontent.com/Mugiballa7/Mugiballa7.github.io/main/Sans%20titre%20(12).png" alt="" width="100%"></div>
-        </div>
-        <hr>
-        <div class="text_template h2">
-            <h1 class="text_right two">For Solver</h1>
-        </div>
-
-        <div class="text_template">
-            <p class="text_right"><strong>Solve, learn & earn. </strong>At Latimer, you can tackle issues important to you and engage in various initiatives that match your values and interests. Join forces with individuals globally to solve problems and generate creative solutions. Receive recognition for your contributions, whether you came up with the answer or assisted in its development. Our challenges are open to everyone, whether you are an experienced professional or an enthusiastic novice, you can create and contribute.<br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link">Join the waitlist </a></p>
-        </div>
-        <div class="text_template">
-            <div class="text_column">
-                <ul>
-                    <li><h3>Earn</h3><p>Creators and contributors are rewarded financially, but beyond the financial gain, your success in Latimer will be a significant addition to your CV or social profile.</p></li>
-                    <li><h3>Passion</h3><p>Collaborate with people with complementary talents who share your interests and values, to develop innovative solutions to issues you care about or are passionate about.</p></li>
-                    <li><h3>Self-development</h3><p>Develop your skills and find deeper meaning in your work. We offer you the opportunity to do exciting projects and impact the world with your ideas.</p></li>
-                </ul>
-            </div>
-        </div>
-
-        <hr>
-        <div class="text_template h2">
-            <h1 class="text_right three">For Business</h1>
-        </div>
-
-        <div class="text_template">
-            <p class="text_right"><strong>State of the art. </strong> Latimer identifies the prior knowledge that can be used in your R&D project to avoid reinventing the wheel and develop the most effective solutions. We gather and evaluate all the applicable knowledge and delving deeper into the most promising solutions.<br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link">Join the waitlist </a></div>
-
-        <div class="text_template">
-            <div class="text_column">
-                <ul>
-                    <li><h3>Preliminary research</h3><p>Determine whether a new r&d project is technically feasible, what different approaches are possible for the same result and anticipate the potential associated costs.</p></li>
-                    <li><h3>Investigate a weak signal</h3><p>Employed Latimer to devise tactics for implementing a particular technology with the potential to address a specific problem.</p></li>
-                    <li><h3>Product Improvement</h3><p>Update an existing or obsolete product to meet your customers' needs. Latimer can provide you with a full picture of the areas that need improvement along with the best strategies to fill the gap.</p></li>
-                </ul>
-            </div>
-        </div>
-    </main>
-
-    <footer>
-        <div class="text_template reverse">
-            <div class="text_left"><p class="text_content">join the waitlist<a href="https://docs.google.com/forms/d/e/1FAIpQLSfiaFnvyjxLzQhKUZ2P1KONIGK4VKfIz7Guu5nhOhQvvgs1hQ/viewform?usp=sf_link" target="_blank" class="link"> here</a><br><br>For any comments, questions or inquiries contact us by email at <em>tallballa50@gmail.com</em>. We would be delighted to discuss !<br></p></div>
-            <div class="text_right"><h1>Stay in touch & contact</h1></div>
-        </div>
-    </footer>
 
 </body>
 </html>
