--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </ul>
                 </div>
             <h1><a href="https://ppv.land/watch.html?stream=lb_epl2" target="" class="link">PPV</a></h1>
+            <h1><a href="https://homosports.shop/online/stream-64.php" target="" class="link">BEIN</a></h1>
             <h1><a href="https://galla.tube/watch/lens-vs-paris-sg-2076377" target="" class="link">GALLATUBE</a></h1>
             <h1><a href="https://www.rbtv77.com/" target="" class="link">RBTV77</a></h1>
             <h1><a href="https://benmq6h.familiarpowdert89eyas.shop/football/coupe-de-france-4106499/bourgoin-jallieu-vs-lyon.html?icg=RlI" target="" class="link">Apagnan</a></h1>
