Simplify website to basic HTML/CSS/JS and update configuration

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Latimer Lab</title>
+    <link rel="stylesheet" href="frontend/styles/style.css">
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <header>
+      <h1>Welcome to Latimer Lab</h1>
+      <nav>
+        <a href="frontend/garage.html">Garage</a>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <h2>About Us</h2>
+        <p>Welcome to the Latimer Lab website. We are dedicated to innovation and research.</p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 Latimer Lab. All rights reserved.</p>
+    </footer>
+
+    <script type="module" src="frontend/scripts/app.js"></script>
   </body>
 </html> 
